feat(booking-service): initialize backend service with PostgreSQL integration, dd JPA repositories for availability and reservations
- implement AvailabilityRepository with methods for fetching intervals by accommodation
- add ReservationRequestRepository for guest reservation requests with status filters
- add ReservationRepository for confirmed reservations with guest and accommodation filters

* ci: add Gradle CI workflow for Booking microservice

* config: add Booking microservice application.properties for PostgreSQL setup ``

* feat(security): add basic Spring Security config with CORS and CSRF disabled

* feat(availability): add DTOs, controller, service with delete and calendar logic

- Add AvailabilityRequestDto and CalendarIntervalDto for API communication
- Implement AvailabilityController with CRUD endpoints and calendar view
- Add AvailabilityService with create, update, getCalendar, and delete methods
- Delete availability only if no overlapping confirmed reservations exist
- Integrate ReservationRepository for conflict detection

* feat(reservations): extend repository with overlap and status check methods

- Add method to check if overlapping reservations exist for given accommodation
- Add method to fetch overlapping reservations as a Set for calendar integration
- Add method to check existence of overlapping reservations filtered by status
- Support availability deletion logic by preventing removal when conflicts exist

* feat(booking): add reservation request API with CRUD and validation

- introduce ReservationRequest entity and RequestStatus enum
- add DTOs for create and response payloads
- implement ReservationRequestService with create/find/update/delete
- expose REST controller with endpoints for guest and accommodation
- enforce business rules: requests default to PENDING,
  deletion allowed only for PENDING status
- integrate repository queries for guestId and accommodationId lookups

* feat(booking): updated ReservationRequestResponseDto 

--- a/Backend/Booking/src/main/resources/application.properties
+++ b/Backend/Booking/src/main/resources/application.properties
@@ -13,4 +13,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.datasource.hikari.initializationFailTimeout=0
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://dummy
+accommodation.service.url=http://localhost:8085
+spring.kafka.bootstrap-servers=localhost:29092
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/IdentityRealm
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/IdentityRealm/protocol/openid-connect/certs
